--- a/alurapic/src/app/photos/photo-list/photos/photos.component.html
+++ b/alurapic/src/app/photos/photo-list/photos/photos.component.html
@@ -1,7 +1,12 @@
 <p class="text-center text-muted" *ngIf="!photos.length">Sorry, no photos</p>
 <ol class="list-unstyled">
   <li *ngFor="let cols of rows" class="row no-gutters">
-    <div *ngFor="let photo of cols" class="col-4" apDarkenOnHover>
+    <div
+      *ngFor="let photo of cols"
+      class="col-4"
+      apDarkenOnHover
+      brightness="80%"
+    >
       <ap-card>
         <ap-photo
           [url]="photo.url"
